--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.karumi:dexter:5.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'androidx.room:room-runtime:2.2.4'
+    implementation 'androidx.paging:paging-runtime:2.1.1'
 
     kapt 'androidx.room:room-compiler:2.2.4'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
