--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,57 @@ allprojects {
         mavenCentral()
         
     }
+    ext {
+
+        androidLibs = [
+                appcompat           : 'androidx.appcompat:appcompat:1.1.0',
+                recyclerview        : 'androidx.recyclerview:recyclerview:1.0.0',
+                constraintlayout    : 'androidx.constraintlayout:constraintlayout:1.1.3',
+                androidxCore        : 'androidx.core:core-ktx:1.2.0',
+                lifecycleExtensions : 'android.arch.lifecycle:extensions:1.1.1',
+                playServicesLocation: 'com.google.android.gms:play-services-location:17.0.0',
+                material            : 'com.google.android.material:material:1.0.0',
+                roomRuntime         : 'androidx.room:room-runtime:2.2.4',
+                pagingRuntime       : 'androidx.paging:paging-runtime:2.1.1',
+                glide               : 'com.github.bumptech.glide:glide:4.9.0',
+                dexter              : 'com.karumi:dexter:5.0.0'
+        ]
+
+        androidKaptLibs = [
+                roomCompiler : 'androidx.room:room-compiler:2.2.1',
+                glideCompiler: 'com.github.bumptech.glide:compiler:4.9.0'
+        ]
+
+        kotlinLibs = [
+                stdlib    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+                coroutines: 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2'
+        ]
+
+        libs = [
+                koin: "org.koin:koin-android-viewmodel:2.0.1"
+        ]
+
+        testLibs = [
+                junit        : 'junit:junit:4.13',
+                mockitoKotlin: "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0",
+                mockitoInline: "org.mockito:mockito-inline:2.28.2",
+                koinTest     : 'org.koin:koin-test:2.0.1',
+        ]
+
+        androidxTestLibs = [
+                archCoreTesting: 'android.arch.core:core-testing:1.1.1'
+        ]
+
+        androidTestLibs = [
+                testRunner   : 'androidx.test:runner:1.2.0',
+                espresso     : 'androidx.test.espresso:espresso-contrib:3.2.0',
+                rules        : 'androidx.test:rules:1.2.0',
+                extJunit     : 'androidx.test.ext:junit-ktx:1.1.1',
+                koinTest     : 'org.koin:koin-test:2.0.1',
+                fastLaneScreenGrab: 'tools.fastlane:screengrab:2.0.0'
+
+        ]
+    }
 }
 
 task clean(type: Delete) {
