--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,15 @@ android {
             manifestPlaceholders = [ appLabel: "HelloWorld" ]
         }
     }
+
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
+    }
+
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
