--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,20 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.ktlint_version = '9.2.1'
     repositories {
         google()
         jcenter()
         mavenCentral()
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -23,6 +28,15 @@ allprojects {
         mavenCentral()
         
     }
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+
+    ktlint {
+        android.set(true)
+        outputToConsole.set(true)
+        outputColorName.set("RED")
+        disabledRules.set(['import-ordering', 'no-wildcard-imports'])
+    }
+
     ext {
 
         androidLibs = [
